--- a/hugging_face_basics.ipynb
+++ b/hugging_face_basics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUzAYWYJJVE9qN+t614X86",
+      "authorship_tag": "ABX9TyORiVQN/RruaBxKl3kkxwFf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3817,7 +3817,6 @@
       ],
       "metadata": {
         "id": "0r0yQvpfpGbn",
-        "outputId": "4b6722bf-f487-40dd-c474-9b9fe2f22e6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394,
@@ -3889,7 +3888,8 @@
             "207a6e9e32f44ae7965ef04fe67c5946",
             "ce16abde6df644fba7aa87351951f031"
           ]
-        }
+        },
+        "outputId": "4b6722bf-f487-40dd-c474-9b9fe2f22e6b"
       },
       "execution_count": 7,
       "outputs": [
@@ -4294,12 +4294,12 @@
         "pd.DataFrame([outputs]).loc[0, 'answer']"
       ],
       "metadata": {
-        "id": "Xqs6zFBiy1DV",
-        "outputId": "75e9a562-74ac-4bf7-ad64-6f52cf56ac91",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
-        }
+        },
+        "id": "Xqs6zFBiy1DV",
+        "outputId": "75e9a562-74ac-4bf7-ad64-6f52cf56ac91"
       },
       "execution_count": 13,
       "outputs": [
@@ -4346,12 +4346,12 @@
         "outputs[0][\"summary_text\"]"
       ],
       "metadata": {
-        "id": "Dg8mgXSx7ALO",
-        "outputId": "0bb910d9-783f-459a-f9f7-9c78b39b02f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 160
-        }
+        },
+        "id": "Dg8mgXSx7ALO",
+        "outputId": "0bb910d9-783f-459a-f9f7-9c78b39b02f2"
       },
       "execution_count": 16,
       "outputs": [
@@ -4407,11 +4407,11 @@
         "outputs"
       ],
       "metadata": {
-        "id": "Kabh75Yz8_ki",
-        "outputId": "b9c88637-1078-400d-b3d6-5edfd3c107c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Kabh75Yz8_ki",
+        "outputId": "b9c88637-1078-400d-b3d6-5edfd3c107c8"
       },
       "execution_count": 18,
       "outputs": [
@@ -4464,11 +4464,11 @@
         "outputs"
       ],
       "metadata": {
-        "id": "ClJ7xHZu-Riu",
-        "outputId": "d26d1e4d-b55e-4b0e-cf0d-fdbbe5131b14",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ClJ7xHZu-Riu",
+        "outputId": "d26d1e4d-b55e-4b0e-cf0d-fdbbe5131b14"
       },
       "execution_count": 20,
       "outputs": [
@@ -4507,22 +4507,48 @@
         "import requests\n",
         "from transformers import pipeline\n",
         "\n",
-        "image_url = \"https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fbrown-bear&psig=AOvVaw3oMErRuyw29obhvleNgaaK&ust=1735136183750000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMCa9ZfMwIoDFQAAAAAdAAAAABAE\"\n",
+        "image_url = \"/content/bear.jpg\"\n",
         "\n",
-        "image = Image.open(requests.get(image_url,stream=True).raw)"
+        "image = Image.open(requests.get(image_url,stream=True).raw)\n",
+        "\n",
+        "classifier = pipeline(\"image-classification\")\n",
+        "\n",
+        "outputs = classifier(image)\n",
+        "\n",
+        "outputs"
       ],
       "metadata": {
-        "id": "nv6cGQCPAZic"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 349
+        },
+        "id": "nv6cGQCPAZic",
+        "outputId": "31eb28bc-6f10-4209-905b-54e611ec4a5a"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "UnidentifiedImageError",
+          "evalue": "cannot identify image file <_io.BytesIO object at 0x7a815a2368e0>",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mUnidentifiedImageError\u001b[0m                    Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-23-3b33cfafbdea>\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mimage_url\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"https://unsplash.com/photos/brown-bear-in-the-autumn-forest-scientific-name-ursus-arctos-natural-habitat-X0KW8gkD8s0\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_url\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstream\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mclassifier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"image-classification\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/PIL/Image.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   3534\u001b[0m         \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3535\u001b[0m     \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"cannot identify image file %r\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3536\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mUnidentifiedImageError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3537\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3538\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mUnidentifiedImageError\u001b[0m: cannot identify image file <_io.BytesIO object at 0x7a815a2368e0>"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KLyHfs7gCeWU"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "kOVBRBlM_TXp"
-      }
     }
   ]
 }
